Fixed autofocus for FF

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             
         <span id="search-container">
             <!-- "internet:~ will$" added here as ::before -->
-            <input id="search box" type="text" class="searchbox" placeholder="" onkeypress="searchKeyPress(event)" autofocus></input>
+            <input id="search box" type="text" class="searchbox" placeholder="" onkeypress="searchKeyPress(event)"></input>
             <div id="time">
                 <script>
                     var interval;
