Initial upgrade, works only on Safari

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
 		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
-		<input type="text" id="tbox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="s"></input>
+		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="searchKeyPress()"></input>
 		
-		<!-- load the table from js inline -->
-		<script src="table.js" type="text/javascript"></script>		
-
-		<script src="index.js" type="text/javascript"></script>
+		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
