Added fira code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Home</title>
+		<link rel="stylesheet" href="fira_code.css"/>
 		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
