--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
+		<div id="background" class="searchBoxBG">&nbsp;</div>
 		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="searchKeyPress()"></input>
-		
+
 		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
