Finished browser support

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
-		<div id="background" class="searchBoxBG">&nbsp;</div>
+		<div id="background" class="searchBoxBG">
+			<img id="bgimg" class="bgimg" src="bg.jpg"/>
+		</div>
 		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="searchKeyPress()"></input>
 
 		<script src="script.js" type="text/javascript"></script>
