--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8" />
 		<title>Home</title>
 		<link rel="stylesheet" href="fira_code.css"/>
 		<link rel="stylesheet" href="index.css"/>
@@ -9,7 +10,7 @@
 		<div id="background" class="searchBoxBG">
 			<img id="bgimg" class="bgimg" src="bg.jpg"/>
 		</div>
-		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="searchKeyPress()"></input>
+		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)"></input>
 
 		<script src="script.js" type="text/javascript"></script>
 	</body>
