--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Home</title>
-		<link rel="stylesheet" href="fira_code.css"/>
+		<link rel="stylesheet" href="font/fira_code.css"/>
 		<link rel="stylesheet" href="index.css"/>
 	</head>
 	<body>
