--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" />
-		<title>Home</title>
-		<link rel="stylesheet" href="index.css"/>
+		<title>Startpage</title>
+		<link rel='stylesheet' href='index.css'/>
 	</head>
 	<body>
-		<div id="background" class="searchBoxBG">
-			<img id="bgimg" class="bgimg" src="bg.jpg"/>
-		</div>
-		<input type="text" id="search box" class="searchBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)"></input>
-
-		<script src="script.js" type="text/javascript"></script>
+		<input type="text" id="search box" class="searchbox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)"></input>
+		
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
