--- a/index.html
+++ b/index.html
@@ -2,14 +2,72 @@
 <html>
 	<head>
 		<title>Home</title>
-		<script src="twitchcheck/twitchcheck.js"></script>
-		<script src="streamstatus.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<link rel='stylesheet' href="index.css"/>
 	</head>
 	<body>
 		<div class="centerbox">
-			<input type="text" id="search box" class="searchbox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)"></input>
+			<div id="time" class="timecontainer">
+				<script>
+					var interval;
+					function updateTime() {
+						interval = setInterval(writeTime, 1000);
+					}
+					function writeTime() {
+						var now = new Date();
+						function hours() {
+							if (now.getHours().toString().length < 2) {
+								return "0" + now.getHours();
+							} else {
+								return now.getHours();
+							}
+						}
+						function mins() {
+							if (now.getMinutes().toString().length < 2) {
+								return "0" + now.getMinutes();
+							} else {
+								return now.getMinutes();
+							}
+						}
+						document.getElementById("time").innerHTML = hours() + ":" + mins();
+					}
+
+					updateTime();
+					writeTime();
+				</script>
+			</div>
+			<div class="searchcontainer">
+				<p>&gt;</p>
+				<input type="text" id="searchbox" class="searchbox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)" autofocus/>
+			</div>
+			<fieldset class="twitchlinks">
+				<legend>Twitch</legend>
+				<table>
+					<tr class="ltwitch" data-tnick="BarbaricMustard">
+						<td><a class="twitchlink" href="https://twitch.tv/BarbaricMustard">BarbaricMustard</a></td>
+						<td><span class="status loading"></span></td>
+						<td><div class="statustext-container"><span class="statustext offline">Loading...</span></div></td>
+					</tr>
+					<tr class="ltwitch" data-tnick="Roseychuu">
+						<td><a class="twitchlink" href="https://twitch.tv/roseychuu">Roseychuu</a></td>
+						<td><span class="status loading"></span></td>
+						<td><div class="statustext-container"><span class="statustext offline">Loading...</span></div></td>
+					</tr>
+					<tr class="ltwitch" data-tnick="moemarrow">
+						<td><a class="twitchlink" href="https://twitch.tv/moemarrow">MoeMarrow</a></td>
+						<td><span class="status loading"></span></td>
+						<td><div class="statustext-container"><span class="statustext offline">Loading...</span></div></td>
+					</tr>
+				</table>
+			</fieldset>
 		</div>
+
+		<fieldset id="help" class="help hidden">
+			<legend>Commands</legend>
+			<iframe class="helpframe" src="commands.html"></iframe>
+		</fieldset>
+
+		<script src="streamstatus.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
