--- a/commands.html
+++ b/commands.html
@@ -93,7 +93,7 @@
 		<fieldset>
 			<legend>Fun</legend>
 			<dl>
-				<dt>std::cout << [text]</dt>
+				<dt>std::cout &lt;&lt; [text]</dt>
 				<dd>Shows a message box containing the given text.</dd>
 			</dl>
 		</fieldset>
