Add pat to twitch

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 						<td><a class="twitchlink" href="https://twitch.tv/moemarrow">MoeMarrow</a></td>
 						<td><div class="statustext-container"><span class="statustext offline">Loading...</span></div></td>
 					</tr>
+					<tr class="ltwitch" data-tnick="stoopidpuck">
+						<td><span class="status loading"></span></td>
+						<td><a class="twitchlink" href="https://twitch.tv/stoopidpuck">StoopidPuck</a></td>
+						<td>
+							<div class="statustext-container"><span class="statustext offline">Loading...</span></div>
+						</td>
+					</tr>
 				</table>
 			</fieldset>
 		</div>
