--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 					writeTime();
 				</script>
 			</div>
-			<div class="searchcontainer">
+			<fieldset class="searchcontainer">
 				<p>&gt;</p>
 				<input type="text" id="searchbox" class="searchbox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" placeholder="" onkeypress="return searchKeyPress(event)" autofocus/>
-			</div>
+			</fieldset>
 			<fieldset class="twitchlinks">
 				<legend>Twitch</legend>
 				<table>
