--- a/commands.html
+++ b/commands.html
@@ -79,16 +79,10 @@
 				<dd>Goes to SoundCloud.</dd>
 			</dl>
 		</fieldset>
-		<fieldset>
-			<legend>Quinnipiac</legend>
-			<dl>
-				<dt>qu, quinnipiac [mail]</dt>
-				<dd>Goes to the QU site (or the QU mail site if specified).</dd>
-				<dt>myq</dt>
-				<dd>Goes to the MyQ.</dd>
-				<dt>bb, blackboard</dt>
-				<dd>Goes to quinnipiac.blackboard.com.</dd>
-			</dl>
-		</fieldset>
+        <fieldset>
+            <legend>GitHub</legend>
+            <dl>
+                <dt>git, github, $</dt>
+                <dd>Goes to github.com, or to the path specified in argument 1.</dd>
 	</body>
 </html>
